# RAGBench

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.py
configs/: demo.yaml  large_dataset.yaml  squad.yaml  squad_better.yaml
docs/: IMPROVING_RESULTS.md  LARGE_DATASET_GUIDE.md
ragbench/: __init__.py
ragbench/datasets/: __init__.py  build_gold.py  build_gold_large.py  load_corpus.py
ragbench/eval/: __init__.py  __main__.py  report.py  run_eval.py
ragbench/generation/: __init__.py  simple_generator.py
ragbench/guardrails/: __init__.py  hallucination_gate.py
ragbench/metrics/: __init__.py  faithfulness.py  retrieval_metrics.py
ragbench/retrieval/: __init__.py  embedding_retriever.py  protocols.py  tfidf_retriever.py
scripts/: build_better_gold_from_squad.py  download_huggingface_dataset.py  download_wikipedia_dataset.py  example_large_dataset.py  setup_large_dataset.sh
